--- a/blog/Views/Giris/Index.cshtml
+++ b/blog/Views/Giris/Index.cshtml
@@ -12,29 +12,36 @@
 			<div class="container pt-3 pb-2">
 
 				<div class="row pt-2">
-					<form id="frmSignIn" method="post" class="needs-validation">
-						<div class="form-group row">
-							<label class="col-lg-3 col-form-label form-control-label line-height-9 pt-2 text-2 required">Kullanıcı Adı</label>
-							<div class="col-lg-9">
-								<input class="form-control text-3 h-auto py-2" type="text" name="username" value="" required="">
+					<div class="col-lg-6" clas>
+						<form id="frmSignIn" method="post" class="needs-validation">
+							<div class="form-group row">
+								<label class="col-lg-3 col-form-label form-control-label line-height-9 pt-2 text-2 required">Kullanıcı Adı</label>
+								<div class="col-lg-9">
+									<input class="form-control text-3 h-auto py-2" type="text" name="username" value="" required="">
+								</div>
 							</div>
-						</div>
 
-						<div class="form-group row">
-							<label class="col-lg-3 col-form-label form-control-label line-height-9 pt-2 text-2 required">Şifre</label>
-							<div class="col-lg-9">
-								<input class="form-control text-3 h-auto py-2" type="password" name="password" value="" required="">
+							<div class="form-group row">
+								<label class="col-lg-3 col-form-label form-control-label line-height-9 pt-2 text-2 required">Şifre</label>
+								<div class="col-lg-9">
+									<input class="form-control text-3 h-auto py-2" type="password" name="password" value="" required="">
+								</div>
 							</div>
-						</div>
-						<div class="form-group row">
-							<div class="form-group col-lg-9">
+							<div class="form-group row">
+								<div class="form-group col-lg-9">
+								</div>
+								<div class="form-group col-lg-3">
+									<input type="submit" value="Giriş Yap" class="btn btn-primary btn-modern float-end" data-loading-text="Loading...">
+								</div>
 							</div>
-							<div class="form-group col-lg-3">
-								<input type="submit" value="Giriş Yap" class="btn btn-primary btn-modern float-end" data-loading-text="Loading...">
-							</div>
-						</div>
-					</form>
+						</form>
+					</div>
+					
+					<div class="col-lg-6">
 
+						<h1 class="text-center">#LOGO#</h1>
+
+					</div>
 				</div>
 
 			</div>
